# Hackaburg25

./: .gitignore  README.md
.github/workflows/: deploy-frontend.yml
dashboard/backend/: README.md  app.py  pyproject.toml  requirements.txt
dashboard/backend/src/: app.py
dashboard/backend/src/backend/: app.py
dashboard/backend/src/backend/services/: docker.py
dashboard/backend/src/services/: __init__.py  docker.py  exceptions.py
dashboard/frontend/: README.md  package-lock.json  package.json
dashboard/frontend/src/: App.css  App.jsx  api.jsx
dashboard/frontend/src/components/: dashboard.css  dashboard.jsx  help.jsx  servicecard.css  servicecard.jsx  sidebar.css  sidebar.jsx
ddns/: ddns_client.py  ddns_server.py
frp/: README.md
frp_server/: README.md
